--- a/cfn/template/awesome-blog-s3.template.yaml
+++ b/cfn/template/awesome-blog-s3.template.yaml
@@ -23,7 +23,7 @@ Resources:
     Properties:
       Bucket: !Ref S3BucketWeb
       PolicyDocument:
-        Version: "2008-10-17"
+        Version: '2012-10-17'
         Statement:
           - Sid: "AllowCloudFrontServicePrincipal"
             Effect: "Allow"
