--- a/cfn/template/awesome-blog-stateful-cloudfront.template.yaml
+++ b/cfn/template/awesome-blog-stateful-cloudfront.template.yaml
@@ -80,7 +80,7 @@ Resources:
             AllowedMethods:
               - GET
               - HEAD
-              - OPTION
+              - OPTIONS
               - POST
               - PUT
               - DELETE
