--- a/cfn/template/awesome-blog-stateful-apigateway.template.yaml
+++ b/cfn/template/awesome-blog-stateful-apigateway.template.yaml
@@ -54,7 +54,7 @@ Resources:
       StageName: "$default"
       AutoDeploy: true
 
-  FrontPageApiHelloIntegration:
+  FrontPageApiLambdaIntegration:
     Type: AWS::ApiGatewayV2::Integration
     Properties:
       ApiId: !Ref FrontPageApi
@@ -67,7 +67,32 @@ Resources:
             - !Ref AWS::AccountId
             - 'function'
             - !Sub 'awesome-blog-${Environment}-front-page'
+            - 'live'
       PayloadFormatVersion: '2.0'
+
+  FrontPageApiLambdaIntegrationPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName:
+        Fn::Join:
+          - ':'
+          - - 'arn:aws:lambda'
+            - !Ref AWS::Region
+            - !Ref AWS::AccountId
+            - 'function'
+            - !Sub 'awesome-blog-${Environment}-front-page'
+            - 'live'
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${FrontPageApi}/*/*"
+
+  FrontPageApiRoute:
+    Type: AWS::ApiGatewayV2::Route
+    Properties:
+      ApiId: !Ref FrontPageApi
+      RouteKey: GET /{proxy+}
+      AuthorizationType: NONE
+      Target: !Sub "integrations/${FrontPageApiLambdaIntegration}"
 
 Outputs:
   BackendApiId:
